--- a/lesson_0/tsconfig.json
+++ b/lesson_0/tsconfig.json
@@ -1,12 +1,9 @@
 {
   "compilerOptions": {
     "outDir": "./build/",
+    "baseUrl": "src",
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
