--- a/lesson_1/package.json
+++ b/lesson_1/package.json
@@ -73,10 +73,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "react-transition-group": "^4.4.5"
   }
 }
